docs: complete update — C-only bindings, v0.6.1 data, ShardedPulseMap examples
- ffi-bindings.md: complete rewrite — removed Python/Java/Node.js, C-only with full API reference
- getting-started.md: v0.6.1, added ShardedPulseMap + per-entry TTL examples, updated type table
- api-reference.md: added ShardedPulseMap row, insert_ttl in common methods
- api-typed.md: added insert_ttl with examples
- features.md: v0.6.1, ShardedPulseMap in std feature list
- use-cases.md: ShardedPulseMap in all multi-thread examples, per-entry TTL session store

No Python/Java/Node.js references remain in docs/src/